Add visitors infrastrucutre on ObservableViewModel. Add default visitors in ViewModelFactory. Ability to chain empty predicates in ObservableViewModel. Add ObservableViewModel visitors for empty predicate : handle empty enumerable and null objects.

--- a/Hanno/Hanno.Pcl.MVVM.Tests.Unit/Hanno.Pcl.MVVM.Tests.Unit.csproj
+++ b/Hanno/Hanno.Pcl.MVVM.Tests.Unit/Hanno.Pcl.MVVM.Tests.Unit.csproj
@@ -105,8 +105,10 @@
     <Compile Include="ViewModels\AddMvvmCommandVisitorsViewModelFactoryTests.cs" />
     <Compile Include="ViewModels\BindableTests.cs" />
     <Compile Include="ViewModels\CreateCommandsAndOvvmViewModelFactoryTests.cs" />
+    <Compile Include="ViewModels\EnumerableEmptyPredicateVisitorTests.cs" />
     <Compile Include="ViewModels\ExistingObservableViewModelBuilderOptionsTests.cs" />
     <Compile Include="ViewModels\ExistingObservableViewModelBuilderTests.cs" />
+    <Compile Include="ViewModels\NullReferenceEmptyPredicateVisitorTests.cs" />
     <Compile Include="ViewModels\ObservablePropertyTests.cs" />
     <Compile Include="ViewModels\ObservableViewModelBuilderOptionsTests.cs" />
     <Compile Include="ViewModels\ObservableViewModelBuilderProviderTests.cs" />
