--- a/Hanno/Hanno.WinRT/Hanno.WinRT.csproj
+++ b/Hanno/Hanno.WinRT/Hanno.WinRT.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Xaml\Converters\BoolToValueConverter.cs" />
     <Compile Include="Xaml\Converters\BoolToVisibility.cs" />
     <Compile Include="Xaml\Converters\CompositeConverter.cs" />
+    <Compile Include="Xaml\Converters\LazyConverter.cs" />
     <Compile Include="Xaml\Converters\NullToVisibility.cs" />
     <Compile Include="Xaml\Converters\StringFormatConverter.cs" />
     <Compile Include="Extensions\FrameworkElementExtensions.cs" />
