Fix issue with Observable property : when the type is a value type, and we subscribed to the property before setting the first value, if we pushed the default value the observable did not push any value. UpdatableObservableViewModel : Merge RefreshOn with notifcations if the option RefreshOnCollectionUpdateNotification is activated. Add 2 new converters

--- a/Hanno/Hanno.WinRT/Hanno.WinRT.csproj
+++ b/Hanno/Hanno.WinRT/Hanno.WinRT.csproj
@@ -62,8 +62,10 @@
     <Compile Include="Xaml\Converters\BoolToValueConverter.cs" />
     <Compile Include="Xaml\Converters\BoolToVisibility.cs" />
     <Compile Include="Xaml\Converters\CompositeConverter.cs" />
+    <Compile Include="Xaml\Converters\ConverterFromResources.cs" />
     <Compile Include="Xaml\Converters\LazyConverter.cs" />
     <Compile Include="Xaml\Converters\NullToVisibility.cs" />
+    <Compile Include="Xaml\Converters\ReverseBoolConverter.cs" />
     <Compile Include="Xaml\Converters\StringFormatConverter.cs" />
     <Compile Include="Extensions\FrameworkElementExtensions.cs" />
     <Compile Include="Extensions\ViewViewModelBuilderExtensions.cs" />
