--- a/Hanno/Hanno.Pcl.Tests/Hanno.Pcl.Tests.csproj
+++ b/Hanno/Hanno.Pcl.Tests/Hanno.Pcl.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="CqrsInfrastructure\DelegateCommandHandlerTests.cs" />
     <Compile Include="CqrsInfrastructure\DelegateQueryHandlerTests.cs" />
     <Compile Include="Diagnostics\StopwatchCompareTests.cs" />
+    <Compile Include="EnumHelperTests.cs" />
     <Compile Include="Extensions\FrameworkExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\AsyncFromStringKeyValuePairFilesDataTableTests.cs" />
