Add implementation of IRequestNavigation which navigates to a SettingsFlyout Add SettingsCharm service

--- a/Hanno/packages/repositories.config
+++ b/Hanno/packages/repositories.config
@@ -14,6 +14,7 @@
   <repository path="..\Hanno.Phone.MVVM\packages.config" />
   <repository path="..\Hanno.Phone.Rx\packages.config" />
   <repository path="..\Hanno.Testing.Autofixture\packages.config" />
+  <repository path="..\Hanno.WindowsStore\packages.config" />
   <repository path="..\Hanno.WinRT\packages.config" />
   <repository path="..\TestUniversalApp\TestUniversalApp.Windows\packages.config" />
   <repository path="..\TestUniversalApp\TestUniversalApp.WindowsPhone\packages.config" />
