Add concurrency async command bus. Can limit the number of executed concurrently.

--- a/Hanno/Hanno.Pcl/Hanno.Pcl.csproj
+++ b/Hanno/Hanno.Pcl/Hanno.Pcl.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CqrsInfrastructure\IAsyncCommandHandler.cs" />
     <Compile Include="CqrsInfrastructure\IAsyncQueryBus.cs" />
     <Compile Include="CqrsInfrastructure\IAsyncQueryHandler.cs" />
+    <Compile Include="CqrsInfrastructure\ConcurrencyExecutionAsyncCommandBus.cs" />
     <Compile Include="CqrsInfrastructure\ParallelQueryHandler.cs" />
     <Compile Include="Diagnostics\DebuggerAsyncCommandBus.cs" />
     <Compile Include="Diagnostics\DebuggerAsyncQueryBus.cs" />
