--- a/Hanno/Hanno.WinRT/Hanno.WinRT.csproj
+++ b/Hanno/Hanno.WinRT/Hanno.WinRT.csproj
@@ -59,6 +59,12 @@
     <Compile Include="..\Hanno.Phone\IO\FromStorageFolderDirectoryOperations.cs">
       <Link>IO\FromStorageFolderDirectoryOperations.cs</Link>
     </Compile>
+    <Compile Include="Search\ISearchSuggestionProvider.cs" />
+    <Compile Include="Search\ISearchResultVisitor.cs" />
+    <Compile Include="Search\ISearchSuggestion.cs" />
+    <Compile Include="Search\SearchResultSuggestion.cs" />
+    <Compile Include="Search\SearchSeparator.cs" />
+    <Compile Include="Search\SearchQuerySuggestion.cs" />
     <Compile Include="Xaml\Converters\BoolToValueConverter.cs" />
     <Compile Include="Xaml\Converters\BoolToVisibility.cs" />
     <Compile Include="Xaml\Converters\CompositeConverter.cs" />
