--- a/Hanno/Hanno.Pcl.Tests/Hanno.Pcl.Tests.csproj
+++ b/Hanno/Hanno.Pcl.Tests/Hanno.Pcl.Tests.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Collections\DoubleListTests.cs" />
     <Compile Include="ComparerHelperTests.cs" />
     <Compile Include="CqrsInfrastructure\AsyncCommandBaseTests.cs" />
+    <Compile Include="CqrsInfrastructure\AsyncCommandQueryBusTests.cs" />
     <Compile Include="CqrsInfrastructure\AsyncQueryBaseTests.cs" />
     <Compile Include="CqrsInfrastructure\CompositeCommandHandlerTests.cs" />
     <Compile Include="CqrsInfrastructure\DelegateCommandHandlerTests.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="EnumHelperTests.cs" />
     <Compile Include="Extensions\FrameworkExtensionsTests.cs" />
     <Compile Include="LocalAddin.cs" />
+    <Compile Include="NowTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\AsyncFromStringKeyValuePairFilesDataTableTests.cs" />
     <Compile Include="Storage\AsyncStorageTests.cs" />
