--- a/Hanno/Hanno.Pcl.Tests/Hanno.Pcl.Tests.csproj
+++ b/Hanno/Hanno.Pcl.Tests/Hanno.Pcl.Tests.csproj
@@ -109,8 +109,10 @@
   <ItemGroup>
     <Compile Include="Cache\CacheAsyncQueryBusTests.cs" />
     <Compile Include="Cache\CacheEntryTests.cs" />
+    <Compile Include="Cache\MemoryCacheEntryRepositoryTests.cs" />
     <Compile Include="Collections\DoubleListTests.cs" />
     <Compile Include="ComparerHelperTests.cs" />
+    <Compile Include="CompositeParallelInitializableTests.cs" />
     <Compile Include="CqrsInfrastructure\AsyncCommandBaseTests.cs" />
     <Compile Include="CqrsInfrastructure\AsyncCommandQueryBusTests.cs" />
     <Compile Include="CqrsInfrastructure\AsyncQueryBaseTests.cs" />
