--- a/Hanno/packages/repositories.config
+++ b/Hanno/packages/repositories.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Hanno.Mobile\packages.config" />
   <repository path="..\Hanno.Net45.MVVM.Unity\packages.config" />
   <repository path="..\Hanno.Net45.MVVM\packages.config" />
   <repository path="..\Hanno.Net45.Rx\packages.config" />
+  <repository path="..\Hanno.Net45\packages.config" />
   <repository path="..\Hanno.Pcl.Http.Tests\packages.config" />
   <repository path="..\Hanno.Pcl.Http\packages.config" />
   <repository path="..\Hanno.Pcl.Json\packages.config" />
@@ -11,9 +13,11 @@
   <repository path="..\Hanno.Pcl.Rx.Tests\packages.config" />
   <repository path="..\Hanno.Pcl.Rx\packages.config" />
   <repository path="..\Hanno.Pcl.Tests\packages.config" />
+  <repository path="..\Hanno.Pcl\packages.config" />
   <repository path="..\Hanno.Phone.MVVM\packages.config" />
   <repository path="..\Hanno.Phone.Rx\packages.config" />
   <repository path="..\Hanno.Testing.Autofixture\packages.config" />
+  <repository path="..\Hanno.Unity\packages.config" />
   <repository path="..\Hanno.WindowsStore\packages.config" />
   <repository path="..\Hanno.WinRT\packages.config" />
   <repository path="..\TestUniversalApp\TestUniversalApp.Windows\packages.config" />
