--- a/Hanno/Hanno.Mobile/Hanno.Mobile.csproj
+++ b/Hanno/Hanno.Mobile/Hanno.Mobile.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
