--- a/Hanno/Hanno.Net45.MVVM/packages.config
+++ b/Hanno/Hanno.Net45.MVVM/packages.config
@@ -7,4 +7,5 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-WPF" version="2.2.5" targetFramework="net45" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
+  <package id="Zero29" version="0.6.1" targetFramework="net45" />
 </packages>
