--- a/Hanno/Hanno.Pcl.Http.Tests/packages.config
+++ b/Hanno/Hanno.Pcl.Http.Tests/packages.config
@@ -15,4 +15,5 @@
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
+  <package id="Zero29" version="0.6.1" targetFramework="net45" />
 </packages>
