--- a/Hanno/Hanno.Pcl.Http/packages.config
+++ b/Hanno/Hanno.Pcl.Http/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net45+win+wpa81+wp80" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win+wpa81+wp80" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-net45+win+wpa81+wp80" />
+  <package id="Zero29" version="0.6.1" targetFramework="portable-net45+win+wpa81+wp80" />
 </packages>
