--- a/Hanno/Hanno.Pcl.Rx/packages.config
+++ b/Hanno/Hanno.Pcl.Rx/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable-net45+win+wpa81+wp80" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable-net45+win+wpa81+wp80" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-net45+win+wpa81+wp80" />
+  <package id="Zero29" version="0.6.1" targetFramework="portable-net45+win+wpa81+wp80" />
 </packages>
