--- a/Hanno/Hanno.Pcl.Tests/packages.config
+++ b/Hanno/Hanno.Pcl.Tests/packages.config
@@ -18,4 +18,5 @@
   <package id="Rx-Testing" version="2.2.5" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
+  <package id="Zero29" version="0.6.1" targetFramework="net45" />
 </packages>
