--- a/Hanno/packages/repositories.config
+++ b/Hanno/packages/repositories.config
@@ -16,6 +16,7 @@
   <repository path="..\Hanno.Pcl\packages.config" />
   <repository path="..\Hanno.Phone.MVVM\packages.config" />
   <repository path="..\Hanno.Phone.Rx\packages.config" />
+  <repository path="..\Hanno.Test.Autofixture.Tests\packages.config" />
   <repository path="..\Hanno.Testing.Autofixture\packages.config" />
   <repository path="..\Hanno.Unity\packages.config" />
   <repository path="..\Hanno.WindowsStore\packages.config" />
