--- a/Hanno/Hanno.Testing.Autofixture/Hanno.Testing.Autofixture.csproj
+++ b/Hanno/Hanno.Testing.Autofixture/Hanno.Testing.Autofixture.csproj
@@ -135,6 +135,8 @@
     <Compile Include="IoCustomization.cs" />
     <Compile Include="LocalAddin.cs" />
     <Compile Include="MockExtensions.cs" />
+    <Compile Include="MockPostProcessor.cs" />
+    <Compile Include="MockType.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RxAutoData.cs" />
